# coros-coach

./: .env.example  .gitignore  CLAUDE.md  README.md  README_zh.md  cli.py  coach.py  coros_api.py  models.py  proto_parser.py  pyproject.toml  server.py  test_mcp.py  test_workout_flow.py
.github/workflows/: test.yml
auth/: __init__.py  encrypted_store.py  keyring_store.py
coach/: __init__.py  efficiency.py  fatigue.py  readiness.py  recommendation.py  recovery.py  safety.py  thresholds.py  training.py
docs/: REVERSE.md  mobile-token.md
tests/: test_api.py  test_coach.py  test_parsers.py  test_utils.py
workflows/: generate_plan.py
