[project]
name = "coros-coach"
version = "0.1"
description = "AI-powered Coros Training Hub companion — sleep, HRV, training analysis, workout builder, and training plan library"
requires-python = ">=3.11"
dependencies = [
    "cryptography",
    "pycryptodome>=3.0",
    "fastmcp>=0.9",
    "httpx>=0.27",
    "keyring",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
coros-coach = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py", "auth/*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
